# promisedio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  download_tools_and_missing_sources.py  setup.py
examples/: dirs.py  files.py  lock.py  net1.py  readwrite.py  seek.py  sleep.py  tcp.py  tcp_server.py  timers.py
promisedio/: __init__.py  _internal.py  error.py  fs.py  ns.py  timer.py
src/: c2py.h  chain.h  common.h  converters.h  error.c  error.h  evalmacros.h  fileio.c  fileio.h  fs.c  fs.h  general_types.c  general_types.h  loop.c  loop.h  memory.c  memory.h  module.c  ns.c  ns.h  promise.c  promise.h  timer.c  timer.h  utils.h
src/capsule/: fs.h  loop.h  ns.h  promise.h  signal.h  timer.h
src/clinic/: fileio.c.h  fs.c.h  loop.c.h  module.c.h  ns.c.h  promise.c.h
src/core/: atomic.h  base.h  capsule.h  chain.h  handle.h  memory.h  module.h  uvh.h
src/core/converters/: file.h  inet.h  numeric.h  string.h
src/error/: error.c
src/fs/: capsule.h  fs.c  fs.h  fs_api.h
src/fs/clinic/: fs.c.h
src/loop/: capsule.h  loop.c  loop.h  loop_api.h
src/loop/clinic/: loop.c.h
src/ns/: _openssl.c  _openssl.h  capsule.h  ns.c  ns.h  pyssl.c
src/ns/clinic/: ns.c.h
src/promise/: capsule.h  promise.c  promise.h  promise_api.h  promise_internal.h
src/promise/clinic/: promise.c.h
src/pysource/: 3.10.0_capsule.h  3.10.0_socketmodule.c  3.10.0_socketmodule.h  3.10.0_ssl.h
src/python/: socketmodule.c
src/signal/: capsule.h  signal.c
src/signal/clinic/: signal.c.h
src/timer/: capsule.h  timer.c  timer.h  timer_api.h
src/timer/clinic/: timer.c.h
src/trash/: c2py.h
tools/: capluse.py  checkrefs.py  clinic.py  cpp.py  debuglogcheck.py  getclinic.py  myclinic.py
